--- a/3Game.css
+++ b/3Game.css
@@ -1,7 +1,16 @@
+* {
+    padding: 0;
+    margin: 0;
+    font-family: 'Itim', cursive;
+}
 
+.background {
+    background-color: darkcyan;
+    height: 100vh;
+    padding-top: 1px;
+}
 
 /* buttons settings */
-
 .controls {
     display: flex;
     flex-direction: row;
@@ -11,31 +20,75 @@
 }
 
 .ticButton {
+    background-color: lightgreen;
     color: black;
-    padding: 8px;
+    padding: 15px;
     border-radius: 8px;
     border: none;
-    font-size: 20px;
+    font-size: 30px;
     margin-left: 1em;
     cursor: pointer;
+    margin-top: 70%;
 }
 
 .RPSbutton {
+    background-color: lightcoral;
     color: black;
-    padding: 8px;
+    padding: 15px;
     border-radius: 8px;
     border: none;
-    font-size: 20px;
+    font-size: 30px;
     margin-left: 1em;
     cursor: pointer;
+    margin-top: 70%;
 }
 
 .c4Button {
+    background-color: cyan;
     color: black;
-    padding: 8px;
+    padding: 15px;
     border-radius: 8px;
     border: none;
-    font-size: 20px;
+    font-size: 30px;
     margin-left: 1em;
     cursor: pointer;
+    margin-top: 70%;
+}
+
+/* setting for the titles */
+
+.titles {
+    font-family: 'Itim', cursive;;
+}
+
+.welcomeTitle {
+    text-align: center;
+    margin-top: -60%;
+    font-size: 70px;
+}
+
+/* Settings for the images */
+.RPSpic {
+    margin-top: 52%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 26%;
+    height: 15%;
+    border: none;
+}
+
+.c4Pic {
+    margin-top: -25.5%;
+    position: absolute;
+    border: none;
+}
+
+.tictactoePic {
+    margin-top: 52%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 26%;
+    height: 15%;
+    border: none;
 }
