--- a/3Game.css
+++ b/3Game.css
@@ -91,13 +91,19 @@ body {
 }
 
 /* ****** RPS SETTINGS START ****** */
+
+.RPSnameBox {
+    font-size: 45px;
+}
+
 .RPSname {
     color: black;
-    font-size: 40px;
+    font-size: 50px;
     font-weight: bolder;
     position: absolute;
     left: 16%;
-    top: 220px;
+    top: 360px;
+    transform: translate(-50%, -50%);
 }
 
 .RPSvs {
@@ -105,8 +111,9 @@ body {
     font-size: 60px;
     font-weight: bold;
     position: absolute;
-    left: 50%;
-    top: 25%;
+    left: 47%;
+    top: 400px;
+    transform: translate(-50%, -50%);
     
 }
 
@@ -116,27 +123,31 @@ body {
     font-weight: bolder;
     position: absolute;
     left: 75%;
-    top: 220px;
+    top: 360px;
+    transform: translate(-50%, -50%);
 }
 
 .RPScompImg {
     position: absolute;
     left: 75%;
-    top: 280px;
+    top: 535px;
+    transform: translate(-50%, -50%);
 }
 
 .RPSplayerImg {
     position: absolute;
-    left: 15%;
-    top: 280px;
+    left: 20%;
+    top: 535px;
+    transform: translate(-50%, -50%);
 }
 
 .RPSwinner {
     position: absolute;
-    left: 30%;
+    left: 45%;
     top: 50%;
-    color: blanchedalmond;
-    font-size: 50px;
+    transform: translate(-50%, -50%);
+    color: lightyellow;
+    font-size: 40px;
 }
 
 .RPSEnterButton {
@@ -147,7 +158,7 @@ body {
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-align: center;
     display: inline-block;
-    font-size: 15px;
+    font-size: 30px;
     cursor: pointer;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
@@ -179,26 +190,29 @@ input[type="text"]::placeholder {
 
 .reloadMessage {
     position: absolute;
-    left: 40%;
-    top: 57%;
+    left: 48%;
+    top: 30%;
     color: red;
-    font-size: 15px;
+    font-size: 20px;
+    transform: translate(-50%, -50%);
 }
 
 .RPSplayerScore {
     color: lightgreen;
     font-size: 30px;
     position: absolute;
-    top: 190px;
+    top: 399px;
     left: 20%;
+    transform: translate(-50%, -50%);
 }
 
 .RPScompScore {
     color: lightcoral;
     font-size: 30px;
     position: absolute;
-    top: 190px;
+    top: 399px;
     left: 76%;
+    transform: translate(-50%, -50%);
 }
 
 /* ******** RPS SETTINGS END ******** */
@@ -235,8 +249,9 @@ input[type="text"]::placeholder {
     font-size: 20px;
     position: relative;
     margin-left: 45%;
-    margin-top: 79%;
+    margin-top: 82%;
     cursor: pointer;
+    transform: translate(-50%, -50%);
 }
 
 /* ****** TICTACTOE SETTINGS END ****** */
