took out shadow effect on rps win message

--- a/3Game.css
+++ b/3Game.css
@@ -136,7 +136,7 @@ body {
 
 .RPSname {
     color: black;
-    font-size: 70px;
+    font-size: 90px;
     font-weight: bolder;
     position: absolute;
     left: 16%;
@@ -157,7 +157,7 @@ body {
 
 .RPSopponentname {
     color: black;
-    font-size: 70px;
+    font-size: 90px;
     font-weight: bolder;
     position: absolute;
     left: 75%;
@@ -251,24 +251,25 @@ input[type="text"]::placeholder {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, .9);
+    /* background-color: rgba(0, 0, 0, .9); */
     justify-content: center;
     align-items: center;
-    color: white;
+    color: black;
     font-size: 5rem;
     flex-direction: column;
   }
   
   .winning-message1 button {
-    font-size: 3rem;
+    font-size: 5rem;
     background-color: white;
     border: 1px solid black;
     padding: .25em .5em;
     cursor: pointer;
   }
+ 
   
   .winning-message1 button:hover {
-    background-color: black;
+    background-color: black; 
     color: white;
     border-color: white;
   }
